--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,27 +1,33 @@
-
-
-
-name: Execute notebook
-
-on: [push]
+name: Run caseTracker.py
+    
+on:
+  schedule:
+    - cron: "5 0 * * *" #runs at 00:00 UTC everyday
 
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v1
-    - name: run-notebook
-      uses: actions/setup-python@v1
-    - uses: yaananth/run-notebook@v1
-      with:
-        notebook: "caseTracker.ipynb"
-        params: ""
-        isReport: False
-        poll: True
-    - uses: actions/upload-artifact@master
-      if: always()
-      with:
-        name: output
-        path: ${{ RUNNER.temp }}/nb-runner
-      env:
-        RUNNER: ${{ toJson(runner) }}
+      - name: Checkout repo content
+        uses: actions/checkout@v2 # checkout the repository content to github runner.
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8 #install the python needed
+      - name: Setup Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
+      - name: Execute .py script # run the run.py to get the latest data
+        run: |
+          python caseTracker.py ./
+
+      - name: Commit files
+        id: commit
+        run: |
+          git config --global user.name "tugangui"
+          git config --global user.email "tugangui@g.ucla.edu"
+
+          git add casetracker.sql git commit -m "New casetracker.sql"
+          git push
