--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,7 +2,7 @@ name: Run caseTracker.py
     
 on:
   schedule:
-    - cron: "5 0 * * *" #runs at 00:00 UTC everyday
+    - cron: "*/2 * * * *" #runs at 9am every Monday
 
 jobs:
   build:
