--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,8 +1,8 @@
 name: Run caseTracker.py
     
-on:
-  schedule:
-    - cron: "*/2 * * * *" #runs at 9am every Monday
+on: [push]
+  #schedule:
+    #- cron: "*/2 * * * *" #runs at 9am every Monday
 
 jobs:
   build:
