--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Setup Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install pandas
+          pip install numpy
           pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       - name: Execute .py script # run the run.py to get the latest data
         run: |
