--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pandas
-          pip install numpy
           pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       - name: Execute .py script # run the run.py to get the latest data
         run: |
@@ -31,5 +30,6 @@ jobs:
           git config --global user.name "tugangui"
           git config --global user.email "tugangui@g.ucla.edu"
 
-          git add casetracker.sql git commit -m "New casetracker.sql"
+          git add casetracker.sql 
+          git commit -m "New casetracker.sql"
           git push
